[package]
name = "rupora"
version = "1.0.0"
description = "RUPORA - A modern Markdown editor built with Tauri and Vue"
authors = ["qinyin233"]
edition = "2021"
license = "MIT"
repository = "https://github.com/qinyin233/RUPORA"
homepage = "https://github.com/qinyin233/RUPORA"
readme = "../README.md"
keywords = ["markdown", "editor", "tauri", "vditor"]
categories = ["text-editors"]

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "rupora_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-dialog = "2.6.0"
encoding_rs = "0.8.35"
chardetng = "0.1.17"

